--- a/my_work/lab-0/lab0.ipynb
+++ b/my_work/lab-0/lab0.ipynb
@@ -371,7 +371,7 @@
     "\n",
     "your_api_key =\n",
     "your_crn = \n",
-    "\n",
+    " \n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "QiskitRuntimeService.save_account(\n",
@@ -385,26 +385,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "92766751",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'qgss-2025': {'channel': 'ibm_quantum_platform',\n",
-       "  'url': 'https://cloud.ibm.com',\n",
-       "  'token': 'o72H5mPNdcBXW6HM_aai-q5O_WpAOiJWlBm5sQJWlHSm',\n",
-       "  'instance': 'crn:v1:bluemix:public:quantum-computing:us-east:a/2145060094774da9b6397949cb176d79:6ccdf15c-7ab4-4eda-93b3-edf07c2b4e92::',\n",
-       "  'verify': True,\n",
-       "  'private_endpoint': False}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check that the account has been saved properly\n",
     "service = QiskitRuntimeService(name=\"qgss-2025\")\n",
@@ -998,7 +982,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 [QGSS]",
+   "display_name": "qgss-2025-env",
    "language": "python",
    "name": "python3"
   },
@@ -1012,7 +996,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
